Bug 1660932 - Don't use element bounding for ZoomToFocusedInput when focused element isn't single line control. r=botond

When show virtual keyboard, we calls ZoomToFocusedInput to scroll to focused
element. But this method only consider single line control. It means that this
doesn't scroll better position when focused element is multiple such as
content editable. Because we use element rectangle foo zoom to rect.

So I would like to change this for <textarea> and contenteditable.

If <textarea> or contenteditable, we should use caret frame to scroll to
better position.

Differential Revision: https://phabricator.services.mozilla.com/D96374